[package]
name = "triangle"
version = "0.1.0"
edition = "2021"
authors = ["kuchosauronad0"]
description = "Rust test application"
license-file = "LICENSE"
categories = ["starter"]
keywords = ["starter", "docker", "release"]
repository = "https://github.com/kuchosauronad0/rust-triangle"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
coverage = []

[dependencies]
# reqwest = { version = "0.11.5", features = ["json"] }
# serde_json = "1.0.68"
# serde = { version = "1.0.130", features = ["derive"] }
# futures = "0.3.17"
# tokio = { version = "1.12.0", features = ["full"] }
# log = "0.4.14"
# env_logger = "0.9.0"
# serde_yaml = "0.8.21"
# clap = { version = "3.0.14", features = ["derive"] }

# We compile the Docker container with musl to get a static library. Smaller, faster.
# BUT that means that we need to include openssl
# Documentation on the syntax:
# https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#platform-specific-dependencies
[target.'cfg(all(target_arch = "x86_64", target_os="linux", target_env="musl"))'.dependencies]
# openssl = { version = "0.10.36", features = ["vendored"] }
